--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-messages": "^1.7.9"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.7"
+    "@uirouter/angularjs": "^1.0.7",
+    "angular-animate": "^1.7.9"
   }
 }
